--- a/spec/definitions/Sources/SepaSourceResponse.yaml
+++ b/spec/definitions/Sources/SepaSourceResponse.yaml
@@ -32,3 +32,10 @@ allOf:
             allOf:
               - $ref: '#/definitions/NewLink'
             description: A link to Cancel the SEPA direct debit mandate
+          response-code:
+            type: object
+            allOf:
+              - $ref: '#/definitions/NewLink'
+            description: A link to the full response code details
+            example:
+              href: "https://api.checkout.com/refs/response-codes/10000"
