--- a/spec/definitions/Sources/SourceRequest.yaml
+++ b/spec/definitions/Sources/SourceRequest.yaml
@@ -6,7 +6,7 @@ properties:
   source_type:
     type: string
     description: The payment source type
-    example: "paypal"
+    example: "sepa"
   reference:
     type: string
     description: A reference you can later use to identify the source
