--- a/spec/definitions/Payments/PaymentRequestCardSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestCardSource.yaml
@@ -6,6 +6,7 @@ allOf:
     properties:
       source_type:
         type: string
+        description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
           - card
       number:
