--- a/spec/definitions/Payments/PaymentRequestIdSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestIdSource.yaml
@@ -8,6 +8,7 @@ allOf:
     properties:
       source_type:
         type: string
+        description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
           - id
       id:
