--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -47,6 +47,11 @@ properties:
     type: string
     description: The Gateway response summary
     example: "Approved"
+  flagged:
+    type: boolean
+    description: Whether the payment was flagged by a risk check
+    default: false
+    example: true
   3ds_downgraded:
     type: boolean
     description: Whether this was a 3DS transaction, downgraded to Non-3DS (when `attempt_n3d` is specified)
