--- a/spec/definitions/Payments/CaptureRequest.yaml
+++ b/spec/definitions/Payments/CaptureRequest.yaml
@@ -6,3 +6,7 @@ properties:
       The amount to capture in the major currency. If not specified, the full payment amount will be captured
     minimum: 0
     example: 6540
+  reference:
+    type: string
+    description: A reference you can later use to identify this capture request
+    example: ORD-5023-4E89
