--- a/spec/definitions/Payments/RefundRequest.yaml
+++ b/spec/definitions/Payments/RefundRequest.yaml
@@ -6,3 +6,7 @@ properties:
       The amount to refund in the major currency. If not specified, the full payment amount will be refunded
     minimum: 0
     example: 6540
+  reference:
+    type: string
+    description: A reference you can later use to identify this refund request
+    example: ORD-5023-4E89
