--- a/spec/definitions/Payments/PaymentRequestCardSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestCardSource.yaml
@@ -28,8 +28,10 @@ allOf:
         example: "Bruce Wayne"
       cvv:
         type: string
-        description: Card security code. 3 digits, except for Amex (4 digits).	
+        description: The card verification value/code. 3 digits, except for Amex (4 digits).	
         example: "956"
+        minLength: 3
+        maxLength: 4
       billing_address:
         description: The payment source owner's billing address
         allOf:
