--- a/spec/definitions/Payments/PaymentRequestIdSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestIdSource.yaml
@@ -15,3 +15,9 @@ allOf:
         type: string
         description: The payment source identifer for example, a card source identifier
         example: src_wmlfc3zyhqzehihu7giusaaawu
+      cvv:
+        type: string
+        description: The card verification value/code (for card sources). 3 digits, except for Amex (4 digits).	
+        example: "956"
+        minLength: 3
+        maxLength: 4
