--- a/spec/definitions/Sources/SepaSourceResponse.yaml
+++ b/spec/definitions/Sources/SepaSourceResponse.yaml
@@ -25,17 +25,17 @@ allOf:
           self:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: The URI of the payment source
           cancel:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: A link to Cancel the SEPA direct debit mandate
           response-code:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: A link to the full response code details
             example:
               href: "https://api.checkout.com/refs/response-codes/10000"
