--- a/spec/definitions/Payments/CaptureRequest.yaml
+++ b/spec/definitions/Payments/CaptureRequest.yaml
@@ -10,3 +10,9 @@ properties:
     type: string
     description: A reference you can later use to identify this capture request
     example: ORD-5023-4E89
+  metadata:
+    type: object
+    description: Set of key/value pairs that you can attach to the capture request. It can be useful for storing additional information in a structured format
+    example:
+      coupon_code: "NY2018"
+      partner_id: 123989
