--- a/spec/definitions/Sources/PayPalSourceResponse.yaml
+++ b/spec/definitions/Sources/PayPalSourceResponse.yaml
@@ -25,12 +25,12 @@ allOf:
           self:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: The URI of the payment source
           response-code:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: A link to the full response code details
             example:
               href: "https://api.checkout.com/refs/response-codes/10000"
