--- a/spec/definitions/Sources/SourceRedirectResponse.yaml
+++ b/spec/definitions/Sources/SourceRedirectResponse.yaml
@@ -13,14 +13,14 @@ allOf:
           self:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: The URI of the source
             example:
               href: "https://api.checkout.com/sources/src_y3oqhf46pyzuxjbcn2giaqnb44"
           redirect:
             type: object
             allOf:
-              - $ref: '#/definitions/NewLink'
+              - $ref: '#/definitions/Link'
             description: The URI that the customer should be redirected to, to complete the source creation
             example:
               href: "https://paypal.checkout.com/billing_agreement/src_y3oqhf46pyzuxjbcn2giaqnb44/manual-completion"
