--- a/spec/definitions/Webhooks/Webhook.yaml
+++ b/spec/definitions/Webhooks/Webhook.yaml
@@ -27,5 +27,5 @@ properties:
       self:
         type: object
         allOf:
-          - $ref: '#/definitions/NewLink'
+          - $ref: '#/definitions/Link'
         description: The URI of the payment source
