--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -73,6 +73,11 @@ post:
       description: Payment was accepted but requires input from the owner
       schema:
         $ref: '#/definitions/PaymentRedirectResponse'
+      headers:
+        Cko-Request-Id:
+          $ref: "#/headers/Cko-Request-Id"
+        Cko-Version:
+          $ref: "#/headers/Cko-Version"
     '401':
       description: Unauthorized
     '422':
