--- a/spec/paths/payments@{id}@captures.yaml
+++ b/spec/paths/payments@{id}@captures.yaml
@@ -3,7 +3,9 @@ post:
     - Payments
   summary: Capture a payment
   description: |
-    Captures a payment if supported by the payment method
+    Captures a payment if supported by the payment method. 
+    
+    For card payments, capture requests are processed asynchronously. You can use [webhooks](#tag/Webhooks) to be notified when the capture is successful.
   parameters:
     - in: path
       name: id
@@ -17,8 +19,15 @@ post:
       schema:
         $ref: '#/definitions/CaptureRequest'
   responses:
-    '200':
-      description: Payment was captured successfully
+    '202':
+      description: Capture accepted
+      schema:
+        $ref: '#/definitions/CaptureAcceptedResponse'
+      headers:
+        Cko-Request-Id:
+          $ref: "#/headers/Cko-Request-Id"
+        Cko-Version:
+          $ref: "#/headers/Cko-Version"
     '401':
       description: Unauthorized
     '403':
