--- a/spec/definitions/Payments/RefundAcceptedResponse.yaml
+++ b/spec/definitions/Payments/RefundAcceptedResponse.yaml
@@ -1,8 +1,7 @@
 type: object
 description: Payment response
 required:
-  - id
-  - status
+  - action_id
 properties:
   action_id:
     description: The unique identifier for the refund action
