--- a/spec/definitions/Payments/Payment.yaml
+++ b/spec/definitions/Payments/Payment.yaml
@@ -59,13 +59,6 @@ properties:
       - Partially Refunded
       - Refunded
       - Declined
-  actions:
-    type: array
-    items:
-      - $ref: '#/definitions/PaymentAction'
-    minItems: 1
-    description: |
-      The actions associated with this payment, for example an Authorisation action
   3ds:
     type: boolean
     description: Whether this payment was processed with 3D-Secure
@@ -134,7 +127,10 @@ properties:
   _links:
     type: object
     description: The links related to the payment
-    minItems: 1
+    minItems: 2
+    required:
+      - self
+      - actions
     properties:
       self:
         type: object
@@ -143,6 +139,13 @@ properties:
         description: The URI of the payment
         example:
           href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44"
+      actions:
+        type: object
+        allOf:
+          - $ref: '#/definitions/Link'
+        description: A link to the payment's associated actions
+        example:
+          href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/actions"
       void:
         type: object
         allOf:
@@ -164,8 +167,6 @@ properties:
         description: A link to refund the payment, where applicable
         example:
           href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/refunds"
-    required:
-      - self
           
         
     
