--- a/spec/definitions/Payments/PaymentAction.yaml
+++ b/spec/definitions/Payments/PaymentAction.yaml
@@ -1,4 +1,10 @@
 type: object
+required:
+  - action_id
+  - action_type
+  - amount
+  - response_code
+  - processed_on
 properties:
   action_id:
     description: The unique identifier of the payment action
@@ -11,7 +17,12 @@ properties:
       - Authorisation
       - Void
       - Capture
+      - Partial Refund
       - Refund
+  processed_on:
+    description: The date/time the action was processed
+    allOf:
+      - $ref: '#/definitions/ServerTimestamp'
   amount:
     type: integer
     description: The action amount 
@@ -28,10 +39,6 @@ properties:
     type: string
     description: The Gateway response summary
     example: "Approved"
-  processed_on:
-    description: The date/time the action was processed
-    allOf:
-      - $ref: '#/definitions/ServerTimestamp'
   reference:
     type: string
     description: Your reference for the action
