--- a/spec/definitions/Payments/PaymentRecipient.yaml
+++ b/spec/definitions/Payments/PaymentRecipient.yaml
@@ -11,6 +11,7 @@ properties:
     description: The first six digits and the last four digits of the primary recipient's card, without spaces, or, up to ten characters of the primary recipient's account number
     minLength: 10
     maxLength: 10
+    example: "5555554444"
   zip:
     type: string
     description: The first part of the UK postcode for example W1T 4TJ would be W1T
