--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -101,33 +101,39 @@ properties:
         allOf:
           - $ref: '#/definitions/Link'
         description: The URI of the payment
-        example:
-          href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44"
       actions:
         type: object
         allOf:
           - $ref: '#/definitions/Link'
         description: A link to the payment's associated actions
-        example:
-          href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/actions"
       void:
         type: object
         allOf:
           - $ref: '#/definitions/Link'
         description: A link to void the payment, where applicable
-        example:
-          href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/voids"
       capture:
         type: object
         allOf:
           - $ref: '#/definitions/Link'
         description: A link to capture the payment, where applicable
-        example:
-          href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/captures"
+      refund:
+        type: object
+        allOf:
+          - $ref: '#/definitions/Link'
+        description: A link to refund the payment, where applicable
       response-code:
         type: object
         allOf:
           - $ref: '#/definitions/Link'
         description: A link to the full response code details
-        example:
-          href: "https://api.checkout.com/refs/response-codes/10000"
+    example:
+      self:
+        href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44"
+      actions: 
+        href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/actions"
+      void:
+        href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/voids"
+      capture:
+        href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/capture"
+      response-code:
+        href: "https://api.checkout.com/refs/response-codes/10000"
