--- a/spec/paths/payments@{id}@captures.yaml
+++ b/spec/paths/payments@{id}@captures.yaml
@@ -5,7 +5,7 @@ post:
   description: |
     Captures a payment if supported by the payment method. 
     
-    For card payments, capture requests are processed asynchronously. You can use [webhooks](#tag/Webhooks) to be notified when the capture is successful.
+    For card payments, capture requests are processed asynchronously. You can use [webhooks](#tag/Webhooks) to be notified if the capture is successful.
   parameters:
     - in: path
       name: id
