--- a/spec/paths/payments@{id}@refunds.yaml
+++ b/spec/paths/payments@{id}@refunds.yaml
@@ -5,7 +5,7 @@ post:
   description: |
     Refunds a payment if supported by the payment method.
 
-    For card payments, refund requests are processed asynchronously. You can use [webhooks](#tag/Webhooks) to be notified when the refund is successful.
+    For card payments, refund requests are processed asynchronously. You can use [webhooks](#tag/Webhooks) to be notified if the refund is successful.
   parameters:
     - in: path
       name: id
