--- a/spec/definitions/Events/EventObject.yaml
+++ b/spec/definitions/Events/EventObject.yaml
@@ -1,25 +1,21 @@
 type: object
 properties:
-  event_id:
-    type: string
-    example: 'evt_az5sblvku4ge3dwpztvyizgcau'
+  id:
+    $ref: '#/definitions/EventId'
   event_type:
     type: string
+    description: The event type
     example: charge.succeeded
+  created_on:
+    description: The date/time the event occurred
+    allOf:
+      - $ref: '#/definitions/ServerTimestamp'
   message:
     $ref: '#/definitions/Message'
   notifications:
     type: array
+    description: The notifications (e.g. webhooks) that have been sent for the event
     items:
       $ref: '#/definitions/NotificationSummary'
   _links:
-    type: object
-    properties:
-      self:
-        type: string
-        example:
-          href: /broadcast/events/{eventId}
-      retry:
-        type: string
-        example:
-          href: /broadcast/events/{eventId}/retry
+    $ref: '#/definitions/EventLinks'
