--- a/spec/definitions/Events/NotificationSummary.yaml
+++ b/spec/definitions/Events/NotificationSummary.yaml
@@ -1,15 +1,20 @@
 type: object
 properties:
+  id:
+    $ref: '#/definitions/NotificationId'
   endpoint:
     type: string
-    example: 'https://www.some-endpoint.com'
+    description: The notification endpoint
+    example: https://example.com/webhooks
   success:
     type: boolean
+    description: Whether the notification eventually succeeded
     example: false
   _links:
     type: object
+    description: The links related to the notification
     properties:
       self:
         type: string
         example:
-          href: notifications/{notificationId}
+          href: https://api.checkout.com/events/evt_az5sblvku4ge3dwpztvyizgcau/notifications/ntf_az5sblvku4ge3dwpztvyizgcau
