--- a/spec/paths/events@{eventId}@webhooks@retry.yaml
+++ b/spec/paths/events@{eventId}@webhooks@retry.yaml
@@ -1,23 +1,19 @@
 post:
   tags:
     - Events
-  summary: Retry event for all subscribed webhooks
-  description: Retries notifications for all active webhooks configured
+  summary: Retry all webhooks
+  description: Retries all webhook notifications configured for the specified event
   parameters:
-    - name: eventId
-      required: true
+    - in: path
+      name: eventId
       type: string
-      in: path
-      description: |
-        The event identifier, for example `evt_387ac7a83a054e37ae140105429d76b6`
+      required: true
+      description: The event identifier
+      pattern: "^(evt)_(\\w{26})$"
   responses:
     '202':
-      description: Notifications queued
-    '204':
-      description: Webhooks not found
+      description: Retry accepted
     '401':
       description: Unauthorized
     '404':
-      description: Event not found
-    '422':
-      $ref: '#/responses/InvalidDataError'
+      description: Event or webhook not found
