--- a/spec/paths/events@{eventId}@webhooks@{webhookId}@retry.yaml
+++ b/spec/paths/events@{eventId}@webhooks@{webhookId}@retry.yaml
@@ -1,27 +1,25 @@
 post:
   tags:
     - Events
-  summary: Retry event for webhook
-  description: Retries a single event for a specific webhook
+  summary: Retry webhook
+  description: Retries a specific webhook notification for the given event
   parameters:
-    - name: eventId
-      required: true
+    - in: path
+      name: eventId
       type: string
-      in: path
-      description: |
-        The event identifier, for example `evt_387ac7a83a054e37ae140105429d76b6`
-    - name: webhookId
       required: true
+      description: The event identifier
+      pattern: "^(evt)_(\\w{26})$"
+    - in: path
+      name: webhookId
       type: string
-      in: path
-      description: |
-        The webhook identifier, for example `wh_387ac7a83a054e37ae140105429d76b5`
+      required: true
+      description: The webhook identifier
+      pattern: "^(wh)_(\\w{26})$"
   responses:
     '202':
-      description: Notification sent
+      description: Retry accepted
     '401':
       description: Unauthorized
     '404':
       description: Event or webhook not found
-    '422':
-      $ref: '#/responses/InvalidDataError'
