--- a/spec/paths/events@{eventId}.yaml
+++ b/spec/paths/events@{eventId}.yaml
@@ -4,6 +4,16 @@ get:
   summary: Retrieve event
   description: |
     Retrieves the event with the specified identifier string. The event `message` includes the full event details, the schema of which will vary based on the `event_type`.
+
+    The event message will resemble one of the following examples&#58;
+    * <a href="examples/events/charge-succeeded.json" target="_blank">charge.succeeded</a>
+    * <a href="examples/events/charge-failed.json" target="_blank">charge.failed</a>
+    * <a href="examples/events/charge-captured.json" target="_blank">charge.captured</a>
+    * <a href="examples/events/charge-captured-failed.json" target="_blank">charge.captured.failed</a>
+    * <a href="examples/events/charge-refunded.json" target="_blank">charge.refunded</a>
+    * <a href="examples/events/charge-refunded-failed.json" target="_blank">charge.refunded.failed</a>
+    * <a href="examples/events/charge-voided.json" target="_blank">charge.voided</a>
+    * <a href="examples/events/charge-voided-failed.json" target="_blank">charge.voided.failed</a>
   parameters:
     - in: path
       name: eventId
