All source types now require an appropriately named object

--- a/spec/definitions/Payments/PaymentRequestCardSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestCardSource.yaml
@@ -3,45 +3,50 @@ description: A card payment source
 allOf:
   - $ref: "#/definitions/PaymentRequestSource"
   - type: object
+    required:
+      - card
     properties:
       source_type:
         type: string
         description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
           - card
-      number:
-        type: string
-        description: The card number
-        example: "4543474002249996"
-      expiry_month:
-        type: integer
-        description: The two-digit expiry month of the card
-        minimum: 1
-        example: 6
-      expiry_year:
-        type: integer
-        description: The four-digit expiry year of the card
-        example: 2025
-      name: 
-        type: string
-        description: The card-holder name
-        example: "Bruce Wayne"
-      cvv:
-        type: string
-        description: The card verification value/code. 3 digits, except for Amex (4 digits).	
-        example: "956"
-        minLength: 3
-        maxLength: 4
-      billing_address:
-        description: The payment source owner's billing address
-        allOf:
-          - $ref: '#/definitions/Address'
-      phone:
-        description: The payment source owner's phone number
-        allOf:
-          - $ref: '#/definitions/PhoneNumber'
-    required:
-      - number
-      - expiry_month
-      - expiry_year
-      - source_type
+      card: 
+        type: object
+        properties:
+          number:
+            type: string
+            description: The card number
+            example: "4543474002249996"
+          expiry_month:
+            type: integer
+            description: The two-digit expiry month of the card
+            minimum: 1
+            example: 6
+          expiry_year:
+            type: integer
+            description: The four-digit expiry year of the card
+            example: 2025
+          name: 
+            type: string
+            description: The card-holder name
+            example: "Bruce Wayne"
+          cvv:
+            type: string
+            description: The card verification value/code. 3 digits, except for Amex (4 digits).	
+            example: "956"
+            minLength: 3
+            maxLength: 4
+          billing_address:
+            description: The payment source owner's billing address
+            allOf:
+              - $ref: '#/definitions/Address'
+          phone:
+            description: The payment source owner's phone number
+            allOf:
+              - $ref: '#/definitions/PhoneNumber'
+        required:
+          - number
+          - expiry_month
+          - expiry_year
+          - source_type
