--- a/spec/definitions/Payments/PaymentRequestCustomerSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestCustomerSource.yaml
@@ -9,13 +9,16 @@ allOf:
         description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
           - customer
-      id:
-        type: string
-        description: The customer identifier, required if `email` is not provided
-        example: cus_y3oqhf46pyzuxjbcn2giaqnb44
-      email:
-        type: string
-        format: email
-        description: The customer email address, required if `id` is not provided
-        example: jokershere@gmail.com
+      customer:
+        type: object
+        properties:
+          id:
+            type: string
+            description: The customer identifier, required if `email` is not provided
+            example: cus_y3oqhf46pyzuxjbcn2giaqnb44
+          email:
+            type: string
+            format: email
+            description: The customer email address, required if `id` is not provided
+            example: jokershere@gmail.com
 
