--- a/spec/definitions/Payments/PaymentRequestIdSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestIdSource.yaml
@@ -10,7 +10,7 @@ allOf:
         type: string
         description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
-          - id
+          - "source id"
       id:
         type: string
         description: The payment source identifer for example, a card source identifier
