--- a/spec/paths/events.yaml
+++ b/spec/paths/events.yaml
@@ -4,27 +4,25 @@ get:
   summary: Retrieve events
   description: Retrieves events ordered by the event date in descending order (latest first). Results can be paged by specifying the `skip` and `limit` query parameters.
   parameters:
-    - name: from
-      in: query
+    - in: query
+      name: from
       type: string
       format: date-time
       description: An ISO8601 formatted date and time to search from (default = last 6 months)
-      example: "2018-01-01T00:00:00Z"
-    - name: to
-      in: query
+    - in: query
+      name: to
       type: string
       format: date-time
       description: An ISO8601 formatted date and time to search to (default = now)
-      example: "2018-01-15T12:00:00Z"
-    - name: limit
-      in: query
+    - in: query
+      name: limit
       type: integer
       description: The number of events to return per page
       default: 10
       minimum: 1
       maximum: 100
-    - name: skip
-      in: query
+    - in: query
+      name: skip
       type: integer
       description: The number of events to skip
       default: 0
