--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -5,9 +5,31 @@ post:
   description: |
     Request a payment from a new or existing source. 
 
-    ### Payment Source
+    #### Full Card (PCI Compliant Merchants)
 
-    To use an existing payment source such as a card or SEPA mandate, provide the source identifier.
+    ```
+    {
+      "source": {
+        "number": "4543474002249996",
+        "expiry_month": 6,
+        "expiry_year": 2025,
+        "name": "Bruce Wayne",
+        "cvv": "956"
+      }
+    }
+    ```
+
+    ### Session Token (Checkout Frames, Wallets and Direct Alternative Payment Methods)
+
+    ```
+    {
+      "source": {
+        "token": "tok_ubfj2q76miwundwlk72vxt2i7q"
+      }
+    }
+    ```
+
+    ### Payment Source
 
     ```
     {
@@ -17,62 +39,12 @@ post:
     }
     ```
 
-    #### Full Card (PCI Compliant Merchants)
-
-    ```
-    {
-      "source": {
-        "card": {
-          "number": "4543474002249996",
-          "expiry_month": 6,
-          "expiry_year": 2025,
-          "name": "Bruce Wayne",
-          "cvv": "956"
-        }
-      }
-    }
-    ```
-
-    ### Card Token (Checkout Frames and Digital Wallets)
-
-    ```
-    {
-      "source": {
-        "token": {
-          "id": "tok_ubfj2q76miwundwlk72vxt2i7q",
-          "billing_address": {
-            // ...
-          }
-        }
-      }
-    }
-    ```
-
     ### Customer
 
-    When a customer source is specified we will use the customer's default card source for the payment. 
-    You can also provide the customer's email address if the customer identifier is unknown.
-
     ```
     {
       "source": {
-        "customer": {
-          "id": "cus_y3oqhf46pyzuxjbcn2giaqnb44"
-        }
-      }
-    }
-    ```
-
-    ### Alternative Payments
-
-    To use an Alternative Payment as a source provide an object for the appropriate Alternative Payment name. This can also include any additional data as required by the Alternative Payment method.
-
-    ```
-    {
-      "source": {
-        "ideal": {
-          "issuer_id": "xxx"
-        }
+        "id": "cus_y3oqhf46pyzuxjbcn2giaqnb44"
       }
     }
     ```
