--- a/spec/definitions/Payments/PaymentSource.yaml
+++ b/spec/definitions/Payments/PaymentSource.yaml
@@ -1,22 +1,33 @@
 type: object
 description: Payment source
+required:
+  - id
+  - type
 properties:
   id:
     type: string
     description: The payment source identifier. Can be used for subsequent payments
     example: src_wmlfc3zyhqzehihu7giusaaawu
-  source_type:
+  type:
     type: string
     description: The type of payment source
     example: "card"
+  billing_address:
+    description: The payment source owner's billing address
+    allOf:
+      - $ref: '#/definitions/Address'
+  phone:
+    description: The payment source owner's phone number
+    allOf:
+      - $ref: '#/definitions/PhoneNumber'
   expiry_month:
     type: integer
-    description: The two-digit expiry month (cards)
+    description: The two-digit expiry month
     minimum: 1
     example: 6
   expiry_year:
     type: integer
-    description: The four-digit expiry year (cards)
+    description: The four-digit expiry year
     example: 2025
   name: 
     type: string
@@ -71,14 +82,6 @@ properties:
     type: string
     description: The issuer/card scheme product type
     example: CLASSIC
-  billing_address:
-    description: The payment source owner's billing address
-    allOf:
-      - $ref: '#/definitions/Address'
-  phone:
-    description: The payment source owner's phone number
-    allOf:
-      - $ref: '#/definitions/PhoneNumber'
   avs_check:
     type: string
     description: The Address Verification System check result
@@ -87,7 +90,3 @@ properties:
     type: string
     description: The CVV check result
     example: Y
-
-required:
-  - id
-  - source_type
